--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="title_favorites">Favorites</string>
     <string name="title_next">NEXT</string>
     <string name="title_last">LAST</string>
+    <string name="title_vs">vs</string>
+    <string name="error_empty">No data available!</string>
 </resources>
