--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="title_next">NEXT</string>
     <string name="title_last">LAST</string>
     <string name="title_vs">vs</string>
+    <string name="title_search">Search</string>
+
     <string name="error_empty">No data available!</string>
 </resources>
