display favorite match

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="title_teams">Teams</string>
     <string name="title_favorites">Favorites</string>
 
-    <string name="title_next">NEXT</string>
-    <string name="title_last">LAST</string>
+    <string name="title_next">Next</string>
+    <string name="title_last">Last</string>
 
     <string name="title_vs">vs</string>
 
